syntax = "proto3";

package org.apache.camel.example.springboot.numbers.common.model;

option java_multiple_files = true;

message CommandMessage {
  string command = 1;
  map<string, string> params = 2;
}
